[gd_scene load_steps=4 format=2]

[ext_resource path="res://resources/free_agents/free_agents.gd" type="Script" id=1]
[ext_resource path="res://ui_classes/VButtonContainer.gd" type="Script" id=2]
[ext_resource path="res://themes/default.tres" type="Theme" id=3]

[node name="Agents" type="VBoxContainer"]
margin_left = 888.0
margin_right = 1014.0
margin_bottom = 590.0
rect_min_size = Vector2( 126, 0 )
size_flags_horizontal = 2
script = ExtResource( 1 )

[node name="Label" type="Label" parent="."]
margin_right = 126.0
margin_bottom = 23.0
text = "Agents"
align = 1
valign = 1

[node name="HSeparator" type="HSeparator" parent="."]
margin_top = 31.0
margin_right = 126.0
margin_bottom = 39.0

[node name="Agents" type="ScrollContainer" parent="."]
margin_top = 47.0
margin_right = 126.0
margin_bottom = 590.0
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Agents"]
margin_right = 126.0
margin_bottom = 543.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 2 )
toggle_mode = true
default = 0
null_is_allowed = true

[node name="Invite" type="Button" parent="."]
visible = false
margin_top = 570.0
margin_right = 126.0
margin_bottom = 590.0
text = "Join as free agent"

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="UsersMenu" type="PopupMenu" parent="CanvasLayer"]
margin_right = 130.0
margin_bottom = 92.0
theme = ExtResource( 3 )
items = [ "Invite", null, 0, false, false, 0, 0, null, "", false, "", null, 0, false, false, 2, 0, null, "", true, "Copy ID", null, 0, false, false, 3, 0, null, "", false ]

[connection signal="button_toggled" from="Agents/VBoxContainer" to="." method="_on_VBoxContainer_button_toggled"]
[connection signal="pressed" from="Invite" to="." method="_on_Invite_pressed"]
